# sequence-downloader

./: .gitignore  Cargo.toml  README.md  main.rs  myco_16s.fasta  myco_hsp65.fasta  myco_rpob.fasta  myco_rrl.fasta
