[package]
name = "myco_16s_downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myco_16s_downloader"
path = "main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
